--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,15 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>AC Time Tracker</title>
   <base href="/">
-  
+
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
- 
+
   <!-- Mobile themes -->
   <!-- Chrome, Firefox OS and Opera -->
   <meta name="theme-color" content="#D32F2F">
@@ -16,10 +17,20 @@
   <meta name="msapplication-navbutton-color" content="#D32F2F">
   <!-- iOS Safari (apple) -->
   <meta name="apple-mobile-web-app-status-bar-style" content="#D32F2F">
+  <meta name="msapplication-TileColor" content="#ffffff">
+
+
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
+  <link rel="manifest" href="manifest.json">
+  <link rel="mask-icon" href="assets/images/safari-pinned-tab.svg" color="#d00008">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
