--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,6 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="#D32F2F">
   <meta name="msapplication-TileColor" content="#ffffff">
 
-
   <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
@@ -27,6 +26,18 @@
   <link rel="mask-icon" href="assets/images/safari-pinned-tab.svg" color="#d00008">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/service-worker.js').then(function (registration) {
+        // Registration was successful
+        console.log('ServiceWorker registration successful with scope: ', registration.scope);
+      }).catch(function (err) {
+        // registration failed :(
+        console.log('ServiceWorker registration failed: ', err);
+      });
+    }
+  </script>
 </head>
 
 <body>
