Fixed themes and manifest so that it can be installed as a PWA

--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
 
   <!-- Mobile themes -->
   <!-- Chrome, Firefox OS and Opera -->
-  <meta name="theme-color" content="#D32F2F">
+  <meta name="theme-color" content="#303f9f">
   <!-- Windows Phone (microsoft) -->
-  <meta name="msapplication-navbutton-color" content="#D32F2F">
+  <meta name="msapplication-navbutton-color" content="#303f9f">
   <!-- iOS Safari (apple) -->
-  <meta name="apple-mobile-web-app-status-bar-style" content="#D32F2F">
+  <meta name="apple-mobile-web-app-status-bar-style" content="#303f9f">
   <meta name="msapplication-TileColor" content="#ffffff">
 
   <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
@@ -53,6 +53,7 @@
         top: 50%;
         width: calc(100% - 8px);
         margin: 0 auto;
+        margin-top: -48px;
       }
 
       #bootstrappingScreen div {
