--- a/src/index.html
+++ b/src/index.html
@@ -26,18 +26,6 @@
   <link rel="mask-icon" href="assets/images/safari-pinned-tab.svg" color="#d00008">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/service-worker.js').then(function (registration) {
-        // Registration was successful
-        console.log('ServiceWorker registration successful with scope: ', registration.scope);
-      }).catch(function (err) {
-        // registration failed :(
-        console.log('ServiceWorker registration failed: ', err);
-      });
-    }
-  </script>
 </head>
 
 <body>
@@ -62,9 +50,9 @@
     </style>
 
     <div id="bootstrappingScreen">
-      <img src="assets/images/android-chrome-192x192.png" alt="RankingIT" height="96" width="96" />
-
-      <br />
+      <img src="assets/images/android-chrome-192x192.png" alt="Assetto Corsa Time Tracker" height="96" width="96"/>
+      
+      <br/>
       <div>
         Assetto Corsa Time Tracker
         <br><br><br>
