Some minor SEO fixes

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="Description" content="A beautiful Web App to keep track of your times in Assetto Corsa">
 
   <!-- Mobile themes -->
   <!-- Chrome, Firefox OS and Opera -->
@@ -50,9 +51,9 @@
     </style>
 
     <div id="bootstrappingScreen">
-      <img src="assets/images/android-chrome-192x192.png" alt="Assetto Corsa Time Tracker" height="96" width="96"/>
-      
-      <br/>
+      <img src="assets/images/android-chrome-192x192.png" alt="Assetto Corsa Time Tracker" height="96" width="96" />
+
+      <br />
       <div>
         Assetto Corsa Time Tracker
         <br><br><br>
